--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -7,13 +7,6 @@
   min-height: 100vh;
 }
 
-.goDrawer {
-  cursor: pointer;
-  border-radius: 4px;
-  padding: 10px 20px;
-  border: none;
-}
-
 .description {
   display: inherit;
   justify-content: inherit;
@@ -23,6 +16,24 @@
   width: 100%;
   z-index: 2;
   font-family: var(--font-mono);
+}
+
+.example {
+  display: inherit;
+  justify-content: center;
+  color: dimgray;
+  align-items: inherit;
+  font-size: 0.95rem;
+  max-width: var(--max-width);
+  border-radius: 5px;
+  padding: 16px;
+  margin: 16px;
+  font-family: var(--font-mono);
+  border: black 2px solid;
+}
+
+.example p {
+  padding: 10px;
 }
 
 .description a {
@@ -106,7 +117,7 @@
 
 .center::before,
 .center::after {
-  content: '';
+  content: "";
   left: 50%;
   position: absolute;
   filter: blur(45px);
